--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.graeme.beamitup.FinishTransferActivity">
+    tools:context="com.example.graeme.beamitup.CreateAccountActivity">
 
 </android.support.constraint.ConstraintLayout>
