--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -3,48 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
-    tools:context="com.example.graeme.beamitup.LandingPage">
+    tools:context="com.example.graeme.beamitup.LandingPageActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="1.0">
 
         <Button
-            android:id="@+id/btn_create_account"
+            android:id="@+id/btn_transfer_money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/text_button_create_account"
-            android:layout_gravity="right"/>
+            android:layout_weight="0.5"
+            android:text="@string/text_button_transfer_money"
+            android:layout_margin="16dp"
+            android:layout_gravity="center_horizontal"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/btn_transfer_history"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="16dp">
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/username"
-                android:layout_margin="16dp"
-                android:inputType="text" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/password"
-                android:layout_margin="16dp"
-                android:inputType="textPassword" />
-
-            <Button
-                android:id="@+id/btn_sign_in"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_button_sign_in"
-                android:layout_margin="16dp"
-                android:layout_gravity="center_horizontal"/>
-        </LinearLayout>
+            android:layout_weight="0.5"
+            android:text="@string/text_button_past_transfers"
+            android:layout_margin="16dp"
+            android:layout_gravity="center_horizontal"/>
 
     </LinearLayout>
 
