--- a/app/src/main/res/layout/activity_transfer_money.xml
+++ b/app/src/main/res/layout/activity_transfer_money.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.graeme.beamitup.CreateTransfer">
+    tools:context="com.example.graeme.beamitup.CreateTransferActivity">
 
     <EditText
         android:id="@+id/edittext_transfer_money_reason"
