--- a/app/src/main/res/layout/activity_create_transfer.xml
+++ b/app/src/main/res/layout/activity_create_transfer.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.example.graeme.beamitup.CreateTransferActivity">
 
-
     <LinearLayout
         android:gravity="center_horizontal"
         android:orientation="vertical"
@@ -16,14 +15,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <ListView
-            android:id="@+id/lv_transfer_money_account"
-            android:choiceMode="singleChoice"
-            android:listSelector="@color/colorAccent"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_margin="16dp"
-            android:layout_height="0dp" />
+            android:layout_height="200dp"
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1">
+            <ListView
+                android:id="@+id/lv_transfer_money_account"
+                android:choiceMode="singleChoice"
+                android:listSelector="@color/colorAccent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:isScrollContainer="false"
+                android:layout_margin="16dp" />
+        </LinearLayout>
 
         <EditText
             android:id="@+id/edittext_transfer_money_reason"
@@ -31,6 +37,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/hint_transfer_money_reason"
+            android:layout_margin="16dp"
             android:layout_gravity="center_horizontal"
             android:inputType="textMultiLine"
             android:layout_weight="1" />
@@ -41,6 +48,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/hint_transfer_money_amount"
+            android:layout_margin="16dp"
             android:layout_gravity="center_horizontal"
             android:inputType="numberDecimal"
             android:layout_weight="1" />
@@ -51,6 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/text_button_set_amount"
+            android:layout_margin="16dp"
             android:layout_weight="1" />
     </LinearLayout>
 
