Progress on flow. Now have a login when receiver receives a transfer, and their public key gets filled in. Need to take the transfer on the sender's side, add the private key and do the transfer.

--- a/app/src/main/res/layout/activity_create_reply_transfer.xml
+++ b/app/src/main/res/layout/activity_create_reply_transfer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.graeme.beamitup.ReplyTransferActivity">
+    tools:context="com.example.graeme.beamitup.CreateReplyTransferActivity">
 
     <LinearLayout
         android:gravity="center_horizontal"
@@ -50,6 +50,16 @@
             android:layout_margin="16dp"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/btn_ready_reply"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/text_button_ready_reply"
+            android:layout_margin="16dp"
+            android:layout_weight="1" />
     </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
