--- a/app/src/main/res/layout/activity_reply_transfer.xml
+++ b/app/src/main/res/layout/activity_reply_transfer.xml
@@ -11,25 +11,19 @@
         android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:weightSum="4"
+        android:weightSum="3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:orientation="vertical"
+        <TextView
+            android:id="@+id/tv_transfer_money_receiver_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/tv_transfer_money_receiver_address"
+            android:layout_margin="16dp"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="1">
-            <ListView
-                android:id="@+id/lv_transfer_money_account"
-                android:choiceMode="singleChoice"
-                android:listSelector="@color/colorAccent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:isScrollContainer="false"
-                android:layout_margin="16dp" />
-        </LinearLayout>
+            android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/tv_transfer_money_reason"
