Mildly working fragment selection. Moving logic over to fragment so that it can be used in multiple places easily.

--- a/app/src/main/res/layout/activity_create_transfer.xml
+++ b/app/src/main/res/layout/activity_create_transfer.xml
@@ -13,14 +13,13 @@
         android:id="@+id/frag_eth_picker"
         android:name="com.example.graeme.beamitup.EthPickerFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="150dp"
         />
 
     <EditText
         android:id="@+id/et_transfer_money_reason"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
         android:hint="@string/hint_transfer_money_reason"
         android:layout_margin="16dp"
         android:layout_gravity="center_horizontal"
@@ -30,7 +29,6 @@
         android:id="@+id/et_transfer_money_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
         android:hint="@string/hint_transfer_money_amount"
         android:layout_margin="16dp"
         android:layout_gravity="center_horizontal"
