--- a/app/src/main/res/layout/activity_add_eth.xml
+++ b/app/src/main/res/layout/activity_add_eth.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:inputType="text"
         android:id="@+id/et_eth_address"
-        android:hint="@string/et_eth_address"
+        android:hint="@string/hint_eth_address"
         android:layout_margin="16dp"/>
 
     <EditText
@@ -20,13 +20,13 @@
         android:layout_height="match_parent"
         android:inputType="textPassword"
         android:id="@+id/et_private_key"
-        android:hint="@string/et_private_key"
+        android:hint="@string/hint_private_key"
         android:layout_margin="16dp"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:text="@string/text_button_create_account"
+        android:text="@string/btn_add_eth"
         android:id="@+id/btn_add_eth"
         android:layout_gravity="center_horizontal"
         android:layout_margin="16dp"/>
