--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:text="@string/text_button_transfer_money"
+            android:text="@string/btn_transfer_money"
             android:layout_margin="16dp"
             android:layout_gravity="center_horizontal"/>
 
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:text="@string/text_button_add_eth"
+            android:text="@string/btn_add_eth"
             android:layout_margin="16dp"
             android:layout_gravity="center_horizontal"/>
 
