--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:id="@+id/btn_create_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/text_button_create_account"
+            android:text="@string/btn_create_account"
             android:layout_gravity="right"/>
 
         <LinearLayout
@@ -31,7 +31,7 @@
                 android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="@string/text_et_email"
+                android:hint="@string/hint_email"
                 android:layout_margin="16dp"
                 android:inputType="textEmailAddress" />
 
@@ -39,7 +39,7 @@
                 android:id="@+id/et_password"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="@string/text_et_password"
+                android:hint="@string/hint_password"
                 android:layout_margin="16dp"
                 android:inputType="textPassword" />
 
@@ -47,7 +47,7 @@
                 android:id="@+id/btn_sign_in"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/text_button_sign_in"
+                android:text="@string/btn_sign_in"
                 android:layout_margin="16dp"
                 android:layout_gravity="center_horizontal"/>
         </LinearLayout>
