--- a/app/src/main/res/layout/activity_finish_transfer.xml
+++ b/app/src/main/res/layout/activity_finish_transfer.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.graeme.beamitup.FinishTransferActivity"
+    tools:context="com.example.graeme.beamitup.LandingPageActivity"
     android:orientation="vertical"
-    android:layout_margin="8dp">
+    android:gravity="center_horizontal"
+    android:layout_margin="16dp"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="2"
         android:layout_margin="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/ll_transfer_sender_public_key"
         >
         <TextView
@@ -40,9 +38,6 @@
         android:layout_height="wrap_content"
         android:weightSum="2"
         android:layout_margin="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_transfer_sender_public_key"
         android:id="@+id/ll_transfer_receiver_public_key"
         >
         <TextView
@@ -67,9 +62,6 @@
         android:layout_height="wrap_content"
         android:weightSum="2"
         android:layout_margin="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_transfer_receiver_public_key"
         android:id="@+id/ll_transfer_status"
         >
         <TextView
@@ -94,9 +86,6 @@
         android:layout_height="wrap_content"
         android:weightSum="2"
         android:layout_margin="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_transfer_status"
         android:id="@+id/ll_transfer_amount"
         >
         <TextView
@@ -121,9 +110,6 @@
         android:layout_height="wrap_content"
         android:weightSum="2"
         android:layout_margin="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_transfer_amount"
         android:id="@+id/ll_transfer_reason"
         >
         <TextView
@@ -143,5 +129,4 @@
             />
     </LinearLayout>
 
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
