--- a/app/src/main/res/layout/list_item_eth.xml
+++ b/app/src/main/res/layout/list_item_eth.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="16dp">
+    android:orientation="horizontal"
+    >
 
     <TextView
-        android:layout_margin="16dp"
         android:id="@+id/tv_eth_id"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
-
-    <TextView
+        android:layout_height="wrap_content"
+        android:text="@string/tv_eth_id_default"
         android:layout_margin="16dp"
-        android:id="@+id/tv_eth_address"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:layout_constraintLeft_toRightOf="@+id/tv_eth_id"
         />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/tv_eth_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tv_eth_address_default"
+        android:layout_margin="16dp"
+        />
+
+</LinearLayout>
