--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -1,34 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.graeme.beamitup.LandingPageActivity">
+    tools:context="com.example.graeme.beamitup.LandingPageActivity"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
+    android:layout_margin="16dp"
+    >
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:weightSum="1.0">
+    <Button
+        android:id="@+id/btn_transfer_money"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
+        android:text="@string/btn_transfer_money"
+        android:layout_margin="16dp"
+        android:layout_gravity="center_horizontal"/>
 
-        <Button
-            android:id="@+id/btn_transfer_money"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="@string/btn_transfer_money"
-            android:layout_margin="16dp"
-            android:layout_gravity="center_horizontal"/>
+    <Button
+        android:id="@+id/btn_add_eth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
+        android:text="@string/btn_add_eth"
+        android:layout_margin="16dp"
+        android:layout_gravity="center_horizontal"/>
 
-        <Button
-            android:id="@+id/btn_add_eth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="@string/btn_add_eth"
-            android:layout_margin="16dp"
-            android:layout_gravity="center_horizontal"/>
-
-    </LinearLayout>
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
