--- a/app/src/main/res/layout/activity_ready_transfer.xml
+++ b/app/src/main/res/layout/activity_ready_transfer.xml
@@ -1,48 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.graeme.beamitup.ReadyTransferActivity">
+    tools:context="com.example.graeme.beamitup.ReadyTransferActivity"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
+    >
 
-    <TextView
-        android:id="@+id/tv_amount_label"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Amount:"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="129dp"
-        android:layout_marginLeft="103dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:weightSum="2"
+        android:layout_margin="16dp"
+        >
+        <TextView
+            android:id="@+id/tv_amount_label"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/amount_label"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:layout_margin="16dp"
+            />
 
-    <TextView
-        android:id="@+id/tv_reason_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Reason:"
-        android:layout_marginTop="105dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_amount_label"
-        android:layout_marginLeft="103dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        <TextView
+            android:id="@+id/tv_amount_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/amount_value"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:layout_margin="16dp"
+            />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_amount_value"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="amount"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="129dp"
-        app:layout_constraintLeft_toRightOf="@+id/tv_amount_label"
-        android:layout_marginLeft="8dp" />
+        android:weightSum="2"
+        android:layout_margin="16dp"
+        >
+        <TextView
+            android:id="@+id/tv_reason_label"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/reason_label"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:layout_margin="16dp"
+            />
 
-    <TextView
-        android:id="@+id/tv_reason_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="reason"
-        android:layout_marginTop="105dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_amount_value"
-        app:layout_constraintLeft_toRightOf="@+id/tv_reason_label"
-        android:layout_marginLeft="8dp" />
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_reason_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/reason_value"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:layout_margin="16dp"
+            />
+    </LinearLayout>
+
+</LinearLayout>
