--- a/app/src/main/res/layout/activity_finish_transfer.xml
+++ b/app/src/main/res/layout/activity_finish_transfer.xml
@@ -9,6 +9,11 @@
     android:layout_margin="16dp"
     >
 
+    <ProgressBar
+        android:id="@+id/pb_send_transfer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
